# encryptedsummer

./: .gitignore  README.md
Log2Graph/: AggregatedGraphEdge.cpp  CMakeLists.txt  Doxyfile  EdgeFeatureEncoder.cpp  FeatureEncoder.cpp  GraphBuilder.cpp  GraphEdge.cpp  GraphExporter.cpp  GraphNode.cpp  LogMonitor.cpp  NodeFeatureEncoder.cpp  README.md  TrafficGraph.cpp  ZeekLogParser.cpp  main.cpp
Log2Graph/docs/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c.js  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp.js  FeatureEncoder_8cpp.html  FeatureEncoder_8cpp__incl.map  FeatureEncoder_8cpp__incl.md5  FeatureEncoder_8h.html  FeatureEncoder_8h.js  FeatureEncoder_8h__dep__incl.map  FeatureEncoder_8h__dep__incl.md5  FeatureEncoder_8h__incl.map  FeatureEncoder_8h__incl.md5  FeatureEncoder_8h_source.html  GraphBuilder_8cpp.html  GraphBuilder_8cpp__incl.map  GraphBuilder_8cpp__incl.md5  GraphBuilder_8h.html  GraphBuilder_8h.js  GraphBuilder_8h__dep__incl.map  GraphBuilder_8h__dep__incl.md5  GraphBuilder_8h__incl.map  GraphBuilder_8h__incl.md5  GraphBuilder_8h_source.html  GraphEdge_8h.html  GraphEdge_8h.js  GraphEdge_8h__dep__incl.map  GraphEdge_8h__dep__incl.md5  GraphEdge_8h__incl.map  GraphEdge_8h__incl.md5  GraphEdge_8h_source.html  GraphExporter_8cpp.html  GraphExporter_8cpp.js  GraphExporter_8cpp__incl.map  GraphExporter_8cpp__incl.md5  GraphExporter_8h.html  GraphExporter_8h.js  GraphExporter_8h__dep__incl.map  GraphExporter_8h__dep__incl.md5  GraphExporter_8h__incl.map  (+180 more)
Log2Graph/docs/latex/: CMakeCXXCompilerId_8cpp.tex  FeatureEncoder_8cpp.tex  FeatureEncoder_8cpp__incl.md5  FeatureEncoder_8h.tex  FeatureEncoder_8h__dep__incl.md5  FeatureEncoder_8h__incl.md5  FeatureEncoder_8h_source.tex  GraphBuilder_8cpp.tex  GraphBuilder_8cpp__incl.md5  GraphBuilder_8h.tex  GraphBuilder_8h__dep__incl.md5  GraphBuilder_8h__incl.md5  GraphBuilder_8h_source.tex  GraphEdge_8h.tex  GraphEdge_8h__dep__incl.md5  GraphEdge_8h__incl.md5  GraphEdge_8h_source.tex  GraphExporter_8cpp.tex  GraphExporter_8cpp__incl.md5  GraphExporter_8h.tex  GraphExporter_8h__dep__incl.md5  GraphExporter_8h__incl.md5  GraphExporter_8h_source.tex  GraphNode_8cpp.tex  GraphNode_8cpp__incl.md5  GraphNode_8h.tex  GraphNode_8h__dep__incl.md5  GraphNode_8h__incl.md5  GraphNode_8h_source.tex  GraphUpdateQueue_8h.tex  GraphUpdateQueue_8h__dep__incl.md5  GraphUpdateQueue_8h__incl.md5  GraphVisualizer_8cpp.tex  GraphVisualizer_8h_source.tex  LogMonitor_8cpp__incl.md5  LogMonitor_8h.tex  LogMonitor_8h__incl.md5  RealTimeAnomalyDetector_8cpp.tex  RealTimeAnomalyDetector_8cpp__incl.md5  RealTimeAnomalyDetector_8h.tex  (+55 more)
Log2Graph/docs/xml/: CMakeCCompilerId_8c.xml  CMakeCXXCompilerId_8cpp.xml  Doxyfile.xml  FeatureEncoder_8cpp.xml  FeatureEncoder_8h.xml  GraphBuilder_8cpp.xml  GraphBuilder_8h.xml  GraphEdge_8h.xml  GraphExporter_8cpp.xml  GraphExporter_8h.xml  GraphNode_8cpp.xml  GraphNode_8h.xml  GraphUpdateQueue_8h.xml  GraphVisualizer_8cpp.xml  GraphVisualizer_8h.xml  LogMonitor_8cpp.xml  LogMonitor_8h.xml  README_8md.xml  RealTimeAnomalyDetector_8cpp.xml  RealTimeAnomalyDetector_8h.xml  TrafficGraph_8cpp.xml  TrafficGraph_8h.xml  ZeekLogParser_8cpp.xml  ZeekLogParser_8h.xml  classFeatureEncoder.xml  classGraphBuilder.xml  classGraphEdge.xml  classGraphExporter.xml  classGraphNode.xml  classGraphUpdateQueue.xml  classGraphVisualizer.xml  classLogMonitor.xml  classRealTimeAnomalyDetector.xml  classSafeQueue.xml  classTrafficGraph.xml  classZeekLogParser.xml  compound.xsd  dir_007ad4948e580287e9d3cd339e78f152.xml  dir_08cec4c655d37361da453b6dde918433.xml  dir_09e761304027c904456130627fd4dcf5.xml  (+14 more)
Log2Graph/includes/: AggregatedGraphEdge.h  EdgeFeatureEncoder.h  FeatureEncoder.h  GraphBuilder.h  GraphEdge.h  GraphExporter.h  GraphNode.h  NodeFeatureEncoder.h  RealTimeAnomalyDetector.h  TrafficGraph.h  ZeekLogParser.h
Log2Graph/sample_outputs/big_web_enum/: nw_graph_1747729708.dot  nw_graph_1747729738.dot  nw_graph_1747729798.dot  nw_graph_1747729918.dot  nw_graph_1747729948.dot  nw_graph_1747729978.dot  nw_graph_1747730008.dot  nw_graph_1747730038.dot  nw_graph_1747730068.dot  nw_graph_1747730098.dot  nw_graph_1747730128.dot  nw_graph_1747730159.dot  nw_graph_1747730189.dot  nw_graph_1747730219.dot  nw_graph_1747730249.dot  nw_graph_1747730279.dot  nw_graph_1747730339.dot  nw_graph_1747730520.dot  nw_graph_1747730580.dot  nw_graph_1747730610.dot  nw_graph_1747730791.dot  nw_graph_1747730881.dot  nw_graph_1747731122.dot  nw_graph_1747731182.dot  nw_graph_1747731212.dot  nw_graph_1747731423.dot  nw_graph_1747731453.dot  nw_graph_1747731514.dot  nw_graph_1747731544.dot  nw_graph_1747731574.dot  nw_graph_1747731694.dot  nw_graph_1747731724.dot  nw_graph_1747731755.dot  nw_graph_1747731785.dot  nw_graph_1747731815.dot  nw_graph_1747731845.dot  nw_graph_1747731875.dot  nw_graph_1747731936.dot  nw_graph_1747731966.dot  nw_graph_1747731996.dot  (+69 more)
Log2Graph/sample_outputs/encrypted_smtp/: nw_graph_1747405002.dot  nw_graph_encoded_1747404972.dot
Log2Graph/sample_outputs/nmap/: nw_graph_1747403884.dot  nw_graph_1747403914.dot  nw_graph_1747403944.dot  nw_graph_1747404034.dot  nw_graph_1747404094.dot  nw_graph_1747404154.dot  nw_graph_encoded_1747403884.dot  nw_graph_encoded_1747403914.dot  nw_graph_encoded_1747403944.dot  nw_graph_encoded_1747404004.dot  (+1 more)
graph_builder/: CMakeLists.txt  Doxyfile  GraphBuilder.cpp  GraphBuilder.h  GraphExporter.cpp  GraphNode.cpp  GraphVisualizer.cpp  LogMonitor.cpp  LogMonitor.h  README.md  RealTimeAnomalyDetector.cpp  TrafficAnalyzer.cpp  TrafficGraph.cpp  ZeekLogParser.cpp  ZeekLogParser.h  main.cpp
graph_builder/includes/: FeatureEncoder.h  GraphBuilder.h  GraphEdge.h  GraphExporter.h  GraphUpdateQueue.h  GraphVisualizer.h  LogMonitor.h  RealTimeAnomalyDetector.h  TrafficAnalyzer.h  TrafficGraph.h  ZeekLogParser.h
(+838 files in other folders)
